--- a/KarthaSEG2024/paper.qmd
+++ b/KarthaSEG2024/paper.qmd
@@ -29,7 +29,7 @@ $$
 
 ## Motivation
 
-The primary objective is to develop a mapping from acoustic shot records without density information to those with density information but this is a computationally expensive process. One method is to generate shot records with density information from those lacking it, in order to achieve stronger reflections and a clearer image of the subsurface. We approached this problem using the method of GenAI. Recently, GenAI has made quite an impact in accurate image generation, and using these techniques provides a computationally effective method to generate images. This method promises to offer an accurate and cost-effective way to produce acoustic shot records with density information from shot records without density information; the former are typically expensive to create. Using GenAI, the sampling time is almost 10 times less than when using computational software to produce shot records.
+The primary objective is to develop a mapping from acoustic shot records, which lack density information, to those that include it. However, this transformation is computationally expensive. One approach involves generating shot records with density information from those that lack it, thereby achieving stronger reflections and a clearer image of the subsurface. To address this challenge, we have employed a method known as GenAI. Recently, GenAI has significantly impacted the field of accurate image generation. By applying these techniques, we can offer a computationally efficient method for producing images. This method promises to provide an accurate and cost-effective way to generate acoustic shot records with density information from those without it, which are typically expensive to create. With GenAI, the time required for sampling is almost ten times less than that required when using traditional computational software to produce shot records.
 
 ## Method
 
