response to feeback

--- a/Rex2024SEG/paper.bib
+++ b/Rex2024SEG/paper.bib
@@ -68,3 +68,10 @@ Title = {Fourier Neural Operator for Parametric Partial Differential Equations},
 Year = {2020},
 Eprint = {arXiv:2010.08895},
 }
+
+@misc{wise,
+Author = {Ziyi Yin and Rafael Orozco and Mathias Louboutin and Felix J. Herrmann},
+Title = {WISE: full-Waveform variational Inference via Subsurface Extensions},
+Year = {2023},
+Eprint = {arXiv:2401.06230},
+}
