--- a/Rex2024SEG/paper.bib
+++ b/Rex2024SEG/paper.bib
@@ -75,3 +75,12 @@ Title = {WISE: full-Waveform variational Inference via Subsurface Extensions},
 Year = {2023},
 Eprint = {arXiv:2401.06230},
 }
+
+@inproceedings{siahkoohi2022velocity,
+  title={Velocity continuation with Fourier neural operators for accelerated uncertainty quantification},
+  author={Siahkoohi, Ali and Louboutin, Mathias and Herrmann, Felix J},
+  booktitle={SEG International Exposition and Annual Meeting},
+  pages={D011S092R004},
+  year={2022},
+  organization={SEG}
+}
