--- a/Rex2024SEG/paper.qmd
+++ b/Rex2024SEG/paper.qmd
@@ -18,7 +18,7 @@ $$
 
 Common-image gathers (CIGs) are pivotal in migration velocity analysis (MVA). However, MVA is often hindered by the computational burden of traditional migration methods. To bypass these limitations, we introduce a neural surrogate learning approach that utilizes Fourier neural operators [FNOs, @fno] to accelerate MVA. Following the velocity continuation scheme in @siahkoohi2022velocity, we train a survey-specific FNO to map the CIGs associated with one migration velocity to another. This methodology leverages the capacity of FNOs to approximate complex PDE-based mappings and evaluate with negligible computational cost at inference, thereby expediting MVA.
 <!-- 
-If optimization ends up working by thursday :
+If optimization ends up working by Friday :
 
 $L =-\sum_i\frac{E_i}{i}$
 
@@ -28,9 +28,9 @@ Where $E_i$ represents the $\%$ of energy contained in offsets that are at most 
 
 NOTE: The fft is taken along the offset dimension -->
 
-## Synthetic Case Study
+## Methodology
 
-We conduct a case study on a 2D slice of the Compass model. We generate the observed data with xxx sources and xxx ocean bottom nodes, using a Ricker wavelet with central frequency of xxx Hz. We assume absorbing boundaries in our study. We add uncorrelated band-limited noise with an SNR of xxx dB for realism. We use xxx migration velocity models and generate their CIGs to form our training dataset (Figure 1.c). Next, we train an FNO to map pairs of $1)$ an initial migration velocity model, $2)$ its associated CIGs, and $3)$ a target migration velocity model, to the CIGs associated with the target velocity model (Figure 1.d).
+We conduct a case study on a 2D slice of the Compass model. We generate the observed data with 64 sources and 256 ocean bottom nodes, using a Ricker wavelet with central frequency of 0.015 Hz. We assume absorbing boundaries in our study. We add uncorrelated band-limited noise with an SNR of 12 dB for realism. We use 500 migration velocity models and generate their CIGs to form our training dataset (Figure 1.c). Next, we train an FNO to map pairs of $1)$ an initial migration velocity model, $2)$ its associated CIGs, and $3)$ a target migration velocity model, to the CIGs associated with the target velocity model (Figure 1.d).
 
 ::: {#fig-unsup}
 ![](figures/workflow.001.jpeg){width="90%"}
@@ -38,16 +38,17 @@ We conduct a case study on a 2D slice of the Compass model. We generate the obse
 Migrated CIG from a slice of a Compass model and our observation (a), Smoothed velocity models obtained from background velocity model (b), Migrated CIGs from smoothed velocity models as training targets (c), Surrogate that maps our input to the target CIGs (d)
 :::
 
-{>>The first sample is not so great. Can you plot another one? Also when plotting I would mute the top.<<}
-Figure 2 displays the FNO prediction in the subsurface-offset domain across various velocity models in an unseen test dataset. Despite some minor errors, the FNO prediction successfully captures the focusing pattern of the CIGs, and correctly produces the imaged reflectivities in the zero-offset. Computationally, the upfront training cost could potentially be reduced by transfer learning techniques. At inference, our trained FNO achieves $3200\times$ speed-up compared to numerical computation of CIGs. These findings substantiate the efficiency of the FNOs in generating CIGs for many velocity models, underscoring its applicability in real-time MVA. This accelerated MVA framework could pave the way for quantifying the uncertainty of imaged reflectivities with respect to many velocity models, and also help select velocity models that lead to desired properties in CIGs. This framework will naturally become a postprocessor for velocity models produced by generative artificial intelligence workflows [@wise].
-
 ::: {#fig-sup}
-![](figures/valid_sample=2.png)
+![](figures/valid_sample=8.png)
 
 ![](figures/valid_sample=6.png)
 
 Column 1 represents the true CIG computed analytically. Column 2 represents the predicted CIG from our FNO whereas the last column shows the amplified absolute difference between the first 2 columns
 :::
+
+## Conclusion
+
+Figure 2 displays the FNO prediction in the subsurface-offset domain across various velocity models in an unseen test dataset. Despite some minor errors, the FNO prediction successfully captures the focusing pattern of the CIGs, and correctly produces the imaged reflectivities in the zero-offset. Computationally, the upfront training cost could potentially be reduced by transfer learning techniques. At inference, our trained FNO achieves $3200\times$ speed-up compared to numerical computation of CIGs. These findings substantiate the efficiency of the FNOs in generating CIGs for many velocity models, underscoring its applicability in real-time MVA. This accelerated MVA framework could pave the way for quantifying the uncertainty of imaged reflectivities with respect to many velocity models, and also help select velocity models that lead to desired properties in CIGs. This framework will naturally become a postprocessor for velocity models produced by generative artificial intelligence workflows [@wise].
 
 ## Acknowledgement {.appendix}
 
