--- a/GahlotLi2024SEG/paper.qmd
+++ b/GahlotLi2024SEG/paper.qmd
@@ -10,17 +10,19 @@ bibliography: paper.bib
 
 ## Introduction
 
-Digital Twins refer to dynamic virtual replicas of subsurface systems, integrating real-time data and employing advanced generative Artificial Intelligence (genAI) methodologies, such as neural posterior density estimation via simulation-based inference and sequential Bayesian inference. Thanks to a combination of these advanced Bayesian inference techniques, our approach is capable of addressing several challenges of monitoring CO~2~ storage projects. These challenges include complexity and heterogeneity of the subsurface (seismic and fluid-flow properties), optimization of operations and risk mitigation, e.g. via injection control. Because our Digital Twin is capable of handling diverse monitoring data, consisting of time-lapse seismic and data collected at (monitoring) wells, it provides a technology that can serve as a platform to integrate the seemingly disparate and siloed fields of geophysics and reservoir engineering. In addition, recent breakthroughs in genAI, allow Digital Twins to capture uncertainty in a principled way [@gahlot2023NIPSWSifp,@herrmann2023president]. By employing training and inference recursively, the Digital Twin trains its networks on samples of the simulated current state---i.e., CO~2~ saturation, paired with simulated imaged seismic and/or data collected at (monitoring) wells. These training pairs of the simulated state and simulated observed data are obtained by sampling the posterior distribution, $\mathbf{x}_{k-1}\sim p(\mathbf{x}_{k-1}\vert \mathbf{y}^\mathrm{o}_{1:k-1})$, at the previous timestep ($k-1$) conditioned on field data, $\mathbf{y}^\mathrm{o}_{1:k-1}$, collected over previous timesteps ($1:k-1$), followed by advancing the state to the current timestep, followed by simulating (seismic/well) observations associated with that state. Given these simulated state-observation pairs, the Digital Twin's networks are trained, so they are current and ready to produce samples of the posterior when the new field data comes in---i.e. $\mathbf{x}_{k}\sim p(\mathbf{x}_{k}\vert \mathbf{y}^\mathrm{o}_{1:k})$. While this new neural approach to data assimilation for CO~2~ storage projects provides what is called an uncertainty-informed *Digital Shadow*, it lacks decision making and control to make it a Digital Twin [@thelen2022comprehensivea] capable of optimizing storage operations while mitigating risks including the risk of fracturing the cap rock by exceeding the fracture pressure. The latter risk is illustrated in Figure 1, with the second row to be the differential pressure without control and third row to be the differential pressure with control, where the simulated pressure for the state exceeds the fracture pressures (denoted by the red areas). To avoid this over pressure from happening, we equip our Digital Twin with the ability to ensure that fracture pressures are not exceeded when optimizing the amount of injected CO~2~.
+Digital Twins refer to dynamic virtual replicas of subsurface systems, integrating real-time data and employing advanced generative Artificial Intelligence (genAI) methodologies, such as neural posterior density estimation via simulation-based inference and sequential Bayesian inference. Thanks to combination of these advanced Bayesian inference techniques, our approach is capable of addressing several challenges of monitoring and controlling CO~2~ storage projects. These challenges include the subsurface's complexity and heterogeneity (seismic and fluid-flow properties), operations optimization, and risk mitigation, e.g. via injection rate control. Because our Digital Twin is capable of handling diverse monitoring data, consisting of time-lapse seismic and data collected at (monitoring) wells, it entails a technology that serves as a platform to integrate seemingly disparate and siloed fields, e.g. geophysics and reservoir engineering. In addition, recent breakthroughs in genAI, allow Digital Twins to capture uncertainty in a principled way [@gahlot2023NIPSWSifp,@herrmann2023president]. By employing training and inference recursively, the Digital Twin trains its neural networks on samples of the simulated current state---i.e., CO~2~ saturation, paired with simulated imaged seismic and/or data collected at (monitoring) wells. These training pairs of the simulated state and simulated observations are obtained by sampling the posterior distribution, $\mathbf{x}_{k-1}\sim p(\mathbf{x}_{k-1}\vert \mathbf{y}^\mathrm{o}_{1:k-1})$, at the previous timestep, $k-1$, conditioned on field data, $\mathbf{y}^\mathrm{o}_{1:k-1}$, collected over all previous timesteps, $1:k-1$, followed by advancing the state to the current timestep, followed by simulating (seismic/well) observations associated with that state. Given these simulated state-observation pairs, the Digital Twin's networks are trained, so they are current and ready to produce samples of the posterior when the new field data comes in---i.e. $\mathbf{x}_{k}\sim p(\mathbf{x}_{k}\vert \mathbf{y}^\mathrm{o}_{1:k})$. While this new neural approach to data assimilation for CO~2~ storage projects provides what is called an uncertainty-informed *Digital Shadow*, it lacks decision making and control, which would make it a Digital Twin [@thelen2022comprehensivea], capable of optimizing storage operations while mitigating risks including the risk of fracturing the cap rock by exceeding the fracture pressure. The latter risk is illustrated in Figure 1, where the first row contains simulated samples of the differential pressure (is that what you are plotting???????) at timestep, $k=4$, without control. These samples for the simulated state exceed the fracture pressure and are denoted by the red areas. During this talk, we will have demonstrate how the Digital Twin can make informed decisions to avoid exceeding the fracture pressure.
+
+ <!-- and third row to be the differential pressure with control, where the simulated pressure for the state exceeds the fracture pressures (denoted by the red areas). To avoid this over pressure from happening, we equip our Digital Twin with the ability to ensure that fracture pressures are not exceeded when optimizing the amount of injected CO~2~. -->
 
 ## Methodology
 
-Given 128 samples for the permeability, $\{K^{(m)}\}_{m=1}^{128}$, and the state, $\{\mathbf{x}^{(m)}_{3}\}_{m=1}^{128}$, see the first row of Figure 1 for examples of the pressure state at time-step $k=3$, drawn from the permeability distribution, $K\sim p(K)$, and the posterior distribution, $\mathbf{x}_{3}\sim p(\mathbf{x}_{3}\vert \mathbf{y}^\mathrm{o}_{1:3})$, for the state conditioned on the observed time-lapse data, and a pre-defined confidence interval (e.g. 95 %) on the fracture probability, our task is to maximize the injection rate, so that the fracture probability remains below a certain percentage e.g. 1%. To find this optimized injection rate, we first calculate for each sample, $K$ and $\mathbf{x}^{(m)}_{3}$, the optimized injectivity by $\max_{q_3} q_3\Delta t \ \ \text{subject to} \ \ \mathbf{x}_{4}['p']<\mathbf{p}_{\max}$ where $\mathbf{p}_{\max}$ is the depth-dependent fracture pressure, and $\mathbf{x}_{4}=\mathcal{M}_3(\mathbf{x}_{3}, \mathbf{K}; q_3)$ the time-advanced state denoted by the symbol $\mathcal{M}_3$. For the fluid-flow simulations, we use the open-source Julia package [JUDI.jl](https://github.com/slimgroup/JUDI.jl) and [JutulDarcy.jl](https://github.com/sintefmath/JutulDarcy.jl). With these simulations, and the fact that fracture/no-fracture occurrence are distributed according to the Bernoulli distribution, we are able to select an injection rate that limits fracture occurrence to a prescribed probability with a prescribed confidence interval. For instance, we can compute $Pr([\mathbf{x}_4['p']>p_{\max}]<0.01)<1-0.025$, which corresponds to selecting an injection rate that leads to fracture rate of $<1\%$ with $97.5\%$ confidence.
+To make uncertainty informed decisions on adapting the injection rate, 128 samples of the state (see second row Figure 1), $\{\mathbf{x}^{(m)}_{3}\}_{m=1}^{128}$, and permeability, $\{K^{(m)}\}_{m=1}^{128}$, are drawn at time-step $k=3$ from the posterior distribution, $\mathbf{x}_{3}\sim p(\mathbf{x}_{3}\vert \mathbf{y}^\mathrm{o}_{1:3})$, for the state conditioned on the observed time-lapse data, and from the distribution for the permeability, $K\sim p(K)$. To find the optimized injection rate, we first calculate for each sample, $K$ and $\mathbf{x}^{(m)}_{3}$, the optimized injectivity by $\max_{q_3} q_3\Delta t \ \ \text{subject to} \ \ \mathbf{x}_{4}['p']<\mathbf{p}_{\max}$ where $\mathbf{p}_{\max}$ is the depth-dependent fracture pressure, and $\mathbf{x}_{4}=\mathcal{M}_3(\mathbf{x}_{3}, \mathbf{K}; q_3)$ the time-advanced state denoted by the symbol $\mathcal{M}_3$. For the fluid-flow simulations, the open-source Julia package [JUDI.jl](https://github.com/slimgroup/JUDI.jl) and [JutulDarcy.jl](https://github.com/sintefmath/JutulDarcy.jl) are used. Results of these optimizations are included in Figure 2(a), which contains a histogram of the empirical fracture frequency as a function of injection rates at time $k=3$. Given this histogram, our task is to maximize the injection rate given a pre-defined confidence interval (e.g. 95 %), so that the fracture probability remains below a certain percentage e.g. 1%.  With these simulations, and the fact that fracture/no-fracture occurrence are distributed according to the Bernoulli distribution, we will demonstrate that we are able to select an injection rate that limits fracture occurrence to a prescribed probability with the prescribed confidence interval. For instance, we can compute $Pr([\mathbf{x}_4['p']>p_{\max}]<0.01)<1-0.025$, which corresponds to selecting an injection rate that leads to fracture rate of $<1\%$ with $97.5\%$ confidence. The confidence interval is halved, because the conservative (left) injection rate will be selected.
 
 <!-- I am confused since the confidence intervals are either 95 or 97.5. Why these changes??? -->
 
 ## Results
 
-To calculate injection rates that mitigate the risk of exceeding the fracture pressure. we proceed as follows. First, because the optimized injection rates are close to the fracture pressure, we consider them as proxies for injection rates where the fracture rate is exceeded. Next, Gaussian kernel estimation is applied to produce the red curve, which is used to calculate the Cumulative Density Function (CDF), plotted in Figure 2(a). Using the fact that non-fracture/fracture occurrence entails a Bernoulli distribution, confidence intervals can be calculated, $\pm Z_{\frac{\alpha}{2}} \sqrt{\frac{\hat{p}(1 - \hat{p})}{128}}$ where $\hat{p}$ represents the CDF (blue line) and $Z_{\frac{\alpha}{2}}=1.96$ with $\alpha=0.05$. From the CDF and confidence intervals (denoted by the grey areas), the following conclusions can be drawn: First, if the initial injection rate $q_3 = 0.0500 m^3/s$ is kept, the fracture probability lies between 24.47 – 40.71% (vertical dashed line) and has a maximum likelihood of 32.59%, which are way too high. Second, if we want to limit the fracture occurrence rate to 1% (red dashed line), we need to lower the injection rate to $q_3=0.0387\mathrm{m^3/s}$. To ensure this fracture low occurrence rate, the reduced injection rate is chosen as the smallest injection rate within the confidence interval. As can be observed from Figure 2(b), lowering the injection rate avoids exceeding the fracture pressure at the expense of injecting less CO~2~. Out of 128 samples, 43 samples are fractured with the initial injection rate, while only one sample is fractured with the controlled injection rate.
+To calculate injection rates that mitigate the risk of exceeding the fracture pressure, we proceed as follows. First, because the optimized injection rates are close to the fracture pressure, we consider these optimization as approximations for the injection rates where the fracture rates are exceeded. Next, Kernel Density Estimation (KDE) is applied to produce the smooth red curve in Figure 2(a). This smoothed probability function is used to calculate the Cumulative Density Function (CDF), plotted in Figure 2(b). Using the fact that non-fracture/fracture occurrence entails a Bernoulli distribution, confidence intervals can be calculated, $\pm Z_{\frac{\alpha}{2}} \sqrt{\frac{\hat{p}(1 - \hat{p})}{128}}$ where $\hat{p}$ represents the CDF (blue line) and $Z_{\frac{\alpha}{2}}=1.96$ with $\alpha=0.05$. From the CDF and confidence intervals (denoted by the grey areas), the following conclusions can be drawn: First, if the initial injection rate $q_3 = 0.0500 m^3/s$ is kept, the fracture probability lies between 24.47 –-- 40.71% (vertical dashed line) and has a maximum likelihood of 32.59%, which are all way too high. Second, if we want to limit the fracture occurrence rate to 1% (red dashed line) then we need to lower the injection rate to $q_3=0.0387\mathrm{m^3/s}$. To ensure the low fracture occurrence rate of 1%, the reduced injection rate is chosen as the smallest injection rate within the confidence interval. As can be observed from Figure 2(b), lowering the injection rate avoids exceeding the fracture pressure at the expense of injecting less CO~2~. Out of 128 samples, 43 samples are fractured with the initial injection rate, while only one sample is fractured with the controlled injection rate. (Is this true?)
 
 <!-- ADD a sentence on how many fractured out of 128. May also want to test on new samples. -->
 
@@ -28,7 +30,7 @@ To calculate injection rates that mitigate the risk of exceeding the fracture pr
 
 ## Conclusion and discussions
 
-The above example illustrates how Digital Twins can be used to mitigate risks associated with CO~2~ storage projects. Specifically, we used the Digital Twin's capability of producing samples of its state (pressure), conditioned on observed seismic and/or well data. Using these samples in conjunction with samples from the permeability distribution, we are able to capture statistics on the fracture occurrence rate as a function of the injection rate. Given these statistics, we were to set the fracture occurrence rate and choose the corresponding injection rate as a function of the confidence interval. By following this procedure, exceeding the fracture pressure was avoided by lowering the injection rate. The decision to lower the injection rate and by which amount was informed by our Digital Twin, which uses seismic and/or well data to capture reservoir's state including its uncertainty.
+The above example illustrates how Digital Twins can be used to mitigate risks associated with CO~2~ storage projects. Specifically, we used the Digital Twin's capability to produce samples of its state (pressure), conditioned on observed seismic and/or well data. Using these samples in conjunction with samples from the permeability distribution, we were able to capture statistics on the fracture occurrence rate as a function of the injection rate. Given these statistics, we were able to set a fracture occurrence rate and choose the corresponding injection rate as a function of the confidence interval. By following this procedure, exceeding the fracture pressure was avoided by lowering the injection rate. The decision to lower the injection rate and by which amount was informed by the Digital Twin, which uses seismic and/or well data to capture reservoir's state including its uncertainty.
 
 <!-- The application of a digital twin model for underground CO~2~ storage with injection control and well placements represents a novel contribution to the field. By incorporating a dynamic control approach, our study not  only maximizes the total amount of CO2 securely injected but also introduces a smoothly updated workflow for injection rate control that mirrors the adaptive management strategies employed in real CCS projects. This dual focus on maximizing injection volumes while preventing geomechanical disturbances underscores the potential of digital twin technology to enhance the safety, efficiency, and environmental compatibility of CCS initiatives. -->
 
